# pico-upload

./: Cargo.toml  LICENSE  README.md
src/: main.rs
static/: index.html  main.js  style.css
