[package]
name = "pico-upload"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = { version = "=0.3.5", default-features = false }
warp = "0.3"
hyper = "0.14.2"
fs2 = "0.4.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
humansize = "1.1"
bytes = "1.0"